      value) or an error.

      \item \code{merge()} works in more cases where the data frames
      include matrices.  (Wish of \PR{14974}.)
      
      \item \code{optimize()} and \code{uniroot()} no longer use a
      shared parameter object across calls.  (\code{nlm()},
      \code{nlminb()} and \code{optim()} with numerical derivatives
      still do, as documented.)

      \item The \code{all.eqaal()} method for date-times is now
      documented: times are regarded as equal (by default) if they
      differ by up to 1 msec.

      \item \code{duplicated()} and \code{unique()} gain a \code{nmax}
      argument which can be used to make them much more efficient when
      it is known that there are only a small number of unique entries.
      This is done automatically for factors.
      
      \item Functions \code{rbinom()}, \code{rgeom()}, \code{rhyper()},
      \code{rpois()}, \code{rnbinom(),} \code{rsignrank()} and
      \code{rwilcox()} now return integer (not double) vectors.  This
      halves the storage requirements for large simulations.      
    }
  }

  \subsection{LONG VECTORS}{
    \itemize{
      \item There are the beginnings of support for vectors longer than
      \eqn{2^{31}-1}{2^31 - 1} elements on 64-bit platforms.  This
      applies to raw, logical, integer, double, complex and character
      vectors, as well as lists.  (Elements of character vectors remain
      limited to \eqn{2^{31}-1}{2^31 - 1} bytes.)

      All aspects are currently experimental.

      \item What can be done with such vectors is currently somewhat
      limited, and most operations will return the error \sQuote{long
      vectors not supported yet}.  They can be serialized and
      unserialized, coercion, \code{identical()} and
      \code{object.size()} work and means can be computed.

      \item \code{length()} returns a double for long vectors, and
      lengths can be set to \eqn{2^{31}}{2^31} or more by the