@@ -26,7 +26,7 @@
 
 static SEXP cumsum(SEXP x, SEXP s)
 {
-    long double sum = 0.;
+    LDOUBLE sum = 0.;
     double *rx = REAL(x), *rs = REAL(s);
     for (R_xlen_t i = 0 ; i < xlength(x) ; i++) {
 	if (ISNAN(rx[i])) break;
@@ -70,7 +70,7 @@ static SEXP ccumsum(SEXP x, SEXP s)
 static SEXP cumprod(SEXP x, SEXP s)
 {
     int i;
-    long double prod;
+    LDOUBLE prod;
     double *rx = REAL(x), *rs = REAL(s);
     prod = 1.0;
     for (i = 0 ; i < length(x) ; i++) {
