@@ -68,7 +68,7 @@ static Rboolean isum(int *x, R_xlen_t n, int *value, Rboolean narm, SEXP call)
 
 static Rboolean rsum(double *x, R_xlen_t n, double *value, Rboolean narm)
 {
-    long double s = 0.0;
+    LDOUBLE s = 0.0;
     R_xlen_t i;
     Rboolean updated = FALSE;
 
@@ -85,7 +85,7 @@ static Rboolean rsum(double *x, R_xlen_t n, double *value, Rboolean narm)
 
 static Rboolean csum(Rcomplex *x, R_xlen_t n, Rcomplex *value, Rboolean narm)
 {
-    long double sr = 0.0, si = 0.0;
+    LDOUBLE sr = 0.0, si = 0.0;
     R_xlen_t i;
     Rboolean updated = FALSE;
 
@@ -272,7 +272,7 @@ static Rboolean iprod(int *x, R_xlen_t n, double *value, Rboolean narm)
 
 static Rboolean rprod(double *x, R_xlen_t n, double *value, Rboolean narm)
 {
-    long double s = 1.0;
+    LDOUBLE s = 1.0;
     R_xlen_t i;
     Rboolean updated = FALSE;
 
@@ -289,7 +289,7 @@ static Rboolean rprod(double *x, R_xlen_t n, double *value, Rboolean narm)
 
 static Rboolean cprod(Rcomplex *x, R_xlen_t n, Rcomplex *value, Rboolean narm)
 {
-    long double sr, si, tr, ti;
+    LDOUBLE sr, si, tr, ti;
     R_xlen_t i;
     Rboolean updated = FALSE;
     sr = 1;
@@ -364,7 +364,7 @@ SEXP attribute_hidden do_summary(SEXP call, SEXP op, SEXP args, SEXP env)
 	   or *value ([ir]min / max) is assigned */
 
     if(PRIMVAL(op) == 1) { /* mean */
-	long double s = 0., si = 0., t = 0., ti = 0.;
+	LDOUBLE s = 0., si = 0., t = 0., ti = 0.;
 	R_xlen_t i, n = XLENGTH(CAR(args));
 	SEXP x = CAR(args);
 	switch(TYPEOF(x)) {
