@@ -32,7 +32,7 @@ double dnchisq(double x, double df, double ncp, int give_log)
     const static double eps = 5e-15;
 
     double i, ncp2, q, mid, dfmid, imax;
-    long double sum, term;
+    LDOUBLE sum, term;
 
 #ifdef IEEE_754
     if (ISNAN(x) || ISNAN(df) || ISNAN(ncp))
