@@ -52,7 +52,7 @@
 double pnt(double t, double df, double ncp, int lower_tail, int log_p)
 {
     double albeta, a, b, del, errbd, lambda, rxb, tt, x;
-    long double geven, godd, p, q, s, tnc, xeven, xodd;
+    LDOUBLE geven, godd, p, q, s, tnc, xeven, xodd;
     int it, negdel;
 
     /* note - itrmax and errmax may be changed to suit one's needs. */
